# ESP32S3-Interrupts

./: .gitignore  README.md
components/bme/: bme.c
components/bme/include/: bme.h
components/lora/: lora.c
components/lora/include/: lora.h
components/pms/: pms.c
components/pms/include/: pms.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  node_config.h  sensor_node.c
main/app/communication/: communication.c  communication.h
main/app/device/: device.c  device.h
main/app/monitoring/: monitoring.c  monitoring.h
main/app/packet_assembly/: packet_assembly.c  packet_assembly.h
main/app/sensor_monitoring/: sensor_monitoring.c  sensor_monitoring.h
main/driver/bme280/: bme280_i2c.c  bme280_i2c.h  bme_task.c  bme_task.h
main/driver/lora/: lora.c  lora.h
main/driver/pms5003/: pms5003.c  pms5003.h
main/globals/: globals.c  globals.h
